fix spacing bug on profile

--- a/src/Styles/LikelyLoans/Panel.scss
+++ b/src/Styles/LikelyLoans/Panel.scss
@@ -61,7 +61,7 @@
                     width: 30px;
                     }
                     strong {
-                        padding: 0 20px;
+                        padding: 0 5px;
                     }
                 }
             }
